start first one founded advert instead of random